# wasm-comp

./: Cargo.toml  README.md  wasi_snapshot_preview1.reactor.wasm
component/: Cargo.toml  main.rs
component/wasm/: Cargo.toml  map.rs
